VC707BaseSystemExtended.sdk/.metadata/.plugins/org.eclipse.cdt.ui/standalone_bsp_xaxidma_example_simple_intr_1.build.log
10:22:54 **** Build of configuration Debug for project standalone_bsp_xaxidma_example_simple_intr_1 ****
make all 
'Building file: ../src/xaxidma_example_simple_intr.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xaxidma_example_simple_intr.o" -I../../standalone_bsp/microblaze_0/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v10.0 -mno-xl-soft-mul -mxl-multiply-high -Wl,--no-relax -MMD -MP -MF"src/xaxidma_example_simple_intr.d" -MT"src/xaxidma_example_simple_intr.o" -o "src/xaxidma_example_simple_intr.o" "../src/xaxidma_example_simple_intr.c"
../src/xaxidma_example_simple_intr.c: In function 'main':
../src/xaxidma_example_simple_intr.c:125:21: error: 'XPAR_INTC_0_AXIDMA_0_MM2S_INTROUT_VEC_ID' undeclared (first use in this function)
 #define TX_INTR_ID  XPAR_INTC_0_AXIDMA_0_MM2S_INTROUT_VEC_ID
                     ^
../src/xaxidma_example_simple_intr.c:282:43: note: in expansion of macro 'TX_INTR_ID'
  Status = SetupIntrSystem(&Intc, &AxiDma, TX_INTR_ID, RX_INTR_ID);
                                           ^
../src/xaxidma_example_simple_intr.c:125:21: note: each undeclared identifier is reported only once for each function it appears in
 #define TX_INTR_ID  XPAR_INTC_0_AXIDMA_0_MM2S_INTROUT_VEC_ID
                     ^
../src/xaxidma_example_simple_intr.c:282:43: note: in expansion of macro 'TX_INTR_ID'
  Status = SetupIntrSystem(&Intc, &AxiDma, TX_INTR_ID, RX_INTR_ID);
                                           ^
../src/xaxidma_example_simple_intr.c:124:21: error: 'XPAR_INTC_0_AXIDMA_0_S2MM_INTROUT_VEC_ID' undeclared (first use in this function)
 #define RX_INTR_ID  XPAR_INTC_0_AXIDMA_0_S2MM_INTROUT_VEC_ID
                     ^
../src/xaxidma_example_simple_intr.c:282:55: note: in expansion of macro 'RX_INTR_ID'
  Status = SetupIntrSystem(&Intc, &AxiDma, TX_INTR_ID, RX_INTR_ID);
                                                       ^
make: *** [src/xaxidma_example_simple_intr.o] Hata 1

10:22:56 Build Finished (took 1s.698ms)

